
Change Log Update (00.00.00)
* 2015-10-08 Cleanup and Git
* Moved all Source files to src subfolder.
+ Cleaned up files no longer part of the project.
+ Renamed project files from test to something more descriptive.
+ Added in Unittest++ to start creating and using unit tests.
+ Checked in initial version to GIT. Github will come once more of the base
  is completed.
+ Marking change logs with versions to match GIT
+ Some Cleanup and code break out of the MenuSystem.  Built extension files
  to sepeate specific menu operations.
- Starting on LanguageFile imports and string editor for all configurable 
  prompts.

Change Log Update
* 2015-10-07 MenuSystem WIP
+ Initial Light bar display and movement, and selection are all working
+ Menu handling now working for FIRSTCMD and EVERY on menu  
  returns.
+ Split out Menu DataFile Templates for obv/2 data files to new 
  MenuData Class.  MenuSystem is growing as the core and need to keep
  everything organized.
+ Each Menu Loaded will have a fresh AnsiProcessor instance. 
  This instance keeps track of all pull-down / template screen for 
  parsing special MCI function codes by parsing and building an std::map
  to make a Key Value store of each screen pixel position, pixel in this
  context in a single character on the screen with color, attribute and 
  position data.

- NOTES: Right now up and left move to previous, and down and right
  move to next light bar.  OBV/2 has overwrite for left and right so assign
  with menu commands.. so you can have up and down, or left and right
  toggle bars.. or split out to other menu commands.  Need to add this in.
- Need to Add menu command for override of starting pull-down ID.
- Add Cursor Toggle to hide the cursor when displaying light bars 
  And/Or move to Menu Prompt location.  Also pull in selected menu
  prompt if available.

Change Log Update
* 2015-10-06 MenuSystem
+ Building the light bar menu processing for handling input and hotkeys